--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
                 <button id="loginBtn" class="btn-primary">
                     <i class="fas fa-unlock"></i> Войти
                 </button>
+                
+                <div class="enter-hint">
+                    <i class="fas fa-keyboard"></i> Enter для входа
+                </div>
+            </div>
+            
+            <div class="login-footer">
+                <div class="connection-status">
+                    <i class="fas fa-circle"></i>
+                    <span id="connectionStatus">Проверка...</span>
+                </div>
             </div>
         </div>
     </div>
