--- a/index.html
+++ b/index.html
@@ -108,9 +108,18 @@
                     
                     <!-- Панель эмодзи (скрыта) -->
                     <div id="emojiPanel" class="emoji-panel">
-                        <div class="emoji-list">
-                            😊 ❤️ 👍 😍 💖 👑 ✨ 🎯 💯 🔥
-                        </div>
+<div class="emoji-list">
+    <span class="emoji-item">😊</span>
+    <span class="emoji-item">❤️</span>
+    <span class="emoji-item">👍</span>
+    <span class="emoji-item">😍</span>
+    <span class="emoji-item">💖</span>
+    <span class="emoji-item">👑</span>
+    <span class="emoji-item">✨</span>
+    <span class="emoji-item">🎯</span>
+    <span class="emoji-item">💯</span>
+    <span class="emoji-item">🔥</span>
+</div>
                     </div>
                 </div>
             </footer>
