--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
             
             <div class="login-footer">
                 <div class="connection-status">
-                    <i class="fas fa-circle"></i>
-                    <span id="connectionStatus">Проверка подключения...</span>
+                    <span id="connectionStatus"></span>
                 </div>
             </div>
         </div>
@@ -50,7 +49,7 @@
                     <div class="chat-info">
                         <div class="chat-title">
                             <i class="fas fa-heart"></i>
-                            <span>Система</span>
+                            <span>Чатча</span>
                         </div>
                         <div class="chat-subtitle" id="chatSubtitle">
                             <span id="onlineStatus">•</span>
