--- a/index.html
+++ b/index.html
@@ -115,9 +115,11 @@
     <span class="emoji-item">💖</span>
     <span class="emoji-item">👑</span>
     <span class="emoji-item">✨</span>
+    <span class="emoji-item">⭐</span>
     <span class="emoji-item">🎯</span>
     <span class="emoji-item">💯</span>
     <span class="emoji-item">🔥</span>
+    <span class="emoji-item">🍌</span>
 </div>
                     </div>
                 </div>
