--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </button>
                     <div class="chat-info">
                         <div class="chat-title">
-                            <i class="fas fa-heart"></i>
+                            <i class="fas fa-lock"></i>
                             <span>Чатча</span>
                         </div>
                         <div class="chat-subtitle" id="chatSubtitle">
