--- a/index.html
+++ b/index.html
@@ -120,6 +120,16 @@
     <span class="emoji-item">💯</span>
     <span class="emoji-item">🔥</span>
     <span class="emoji-item">🍌</span>
+    <span class="emoji-item">🍑</span>
+    <span class="emoji-item">🍆</span>
+    <span class="emoji-item">💦</span>
+    <span class="emoji-item">👅</span>
+    <span class="emoji-item">👄</span>
+    <span class="emoji-item">💋</span>
+    <span class="emoji-item">🫦</span>
+    <span class="emoji-item">🥵</span>
+    <span class="emoji-item">😈</span>
+    <span class="emoji-item">👿</span>
 </div>
                     </div>
                 </div>
